@@ -100,6 +100,10 @@ to the clipboard.</td>
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3380714);return false;">3380714</a></td>
+<td>User can now save database after manually taking a bakup./td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3380424);return false;">3380424</a></td>
 <td>System Menu 'X' now closes the Edit/View PropertyPages when the database
 is in R-O mode or the entry is protected.</td>
