@@ -363,7 +363,8 @@ private:
   PWScore *m_pcore;
 };
 
-int PWScore::WriteFile(const StringX &filename, PWSfile::VERSION version)
+int PWScore::WriteFile(const StringX &filename, const bool bUpdateSig,
+                       PWSfile::VERSION version)
 {
   int status;
   PWSfile *out = PWSfile::MakePWSfile(filename, version,
@@ -374,10 +375,12 @@ int PWScore::WriteFile(const StringX &filename, PWSfile::VERSION version)
     return status;
   }
 
-  // since we're writing a new file, the previous sig's
-  // about to be invalidated
-  delete m_pFileSig;
-  m_pFileSig = NULL;
+  if (bUpdateSig) {
+    // since we're writing a new file, the previous sig's
+    // about to be invalidated but NOT if a user initiated Backup
+    delete m_pFileSig;
+    m_pFileSig = NULL;
+  }
 
   m_hdr.m_prefString = PWSprefs::GetInstance()->Store();
   m_hdr.m_whatlastsaved = m_AppNameAndVersion.c_str();
@@ -417,8 +420,9 @@ int PWScore::WriteFile(const StringX &filename, PWSfile::VERSION version)
 
   m_ReadFileVersion = version; // needed when saving a V17 as V20 1st time [871893]
 
-  // Create new signature
-  m_pFileSig = new PWSFileSig(filename.c_str());
+  // Create new signature if required
+  if (bUpdateSig)
+    m_pFileSig = new PWSFileSig(filename.c_str());
 
   return SUCCESS;
 }
