@@ -130,11 +130,12 @@ public:
 
   void NewFile(const StringX &passkey);
   int WriteCurFile() {return WriteFile(m_currfile);}
-  int WriteFile(const StringX &filename, PWSfile::VERSION version = PWSfile::VCURRENT);
+  int WriteFile(const StringX &filename, const bool bUpdateSig = true,
+                PWSfile::VERSION version = PWSfile::VCURRENT);
   int WriteV17File(const StringX &filename)
-  {return WriteFile(filename, PWSfile::V17);}
+  {return WriteFile(filename, true, PWSfile::V17);}
   int WriteV2File(const StringX &filename)
-  {return WriteFile(filename, PWSfile::V20);}
+  {return WriteFile(filename, true, PWSfile::V20);}
 
   // R/O file status
   void SetReadOnly(bool state) {m_IsReadOnly = state;}
